--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -54,3 +54,18 @@
     </div><!--end of row-->
   </div><!--end of container-->
 </section>
+
+<div class="map section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="map-wrapper">
+                    <div id="map" data-lat="40.7033127" data-long="-73.979681"></div>
+                    <a href="#" class="directions"><i class="fa fa-location-arrow"></i></a>
+                </div>
+            </div>
+        </div><!-- /.row -->
+    </div><!-- /.container -->
+</div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
