--- a/app/assets/stylesheets/spree/frontend/style.css
+++ b/app/assets/stylesheets/spree/frontend/style.css
@@ -2207,7 +2207,7 @@ a.load-more {
 /* SLICK CAROUSEL THEME */
 /* Slider */
 .slick-loading .slick-list {
-  background: #fff url("../images/ajax-loader.gif") center center no-repeat;
+  background: #fff url("/assets/ajax-loader.gif") center center no-repeat;
 }
 
 /* Icons */
